--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Hello {{ name }}!</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+<title>{% block title %}Home{% endblock %}</title>
+
+{% block content %}
 <h1>Hello {{ name }}!</h1>
-</body>
-</html>
+{% endblock %}
