--- a/cities/templates/cities/home.html
+++ b/cities/templates/cities/home.html
@@ -7,8 +7,19 @@
 <div class="row">
     <div class="col-md">
         {% for object in object_list %}
-            <p>{{ object.name }}</p>
+            <p><a href="{% url 'cities:detail' object.pk %}">{{ object.name }}</a></p>
         {% endfor %}
     </div>
 </div>
+
+<div class="row">
+    <div class="col-md-4">
+        <form action="" method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit" class="btn btn-light">Submit</button>
+        </form>
+    </div>
+</div>
+
 {% endblock %}
