--- a/cities/templates/cities/home.html
+++ b/cities/templates/cities/home.html
@@ -6,10 +6,35 @@
 <h1>Список городов</h1>
 <div class="row">
     <div class="col-md">
-        {% for object in object_list %}
-            <p><a href="{% url 'cities:detail' object.pk %}">{{ object.name }}</a></p>
+        <table class="table table-striped">
+        {% for object in page_obj %}
+            <tr>
+                <td><a href="{% url 'cities:detail' object.pk %}">{{ object.name }}</a></td>
+                <td><a href="{% url 'cities:update' object.pk %}"><button type="submit" class="btn btn-primary">Редактировать</button></a></td>
+                <td><a href="{% url 'cities:delete' object.pk %}"><button type="submit" class="btn btn-danger">Удалить</button></a></td>
+            </tr>
+
         {% endfor %}
+        </table>
     </div>
+</div>
+
+<div class="pagination">
+    <span class="step-links">
+        {% if page_obj.has_previous %}
+            <a href="?page=1">&laquo; first</a>
+            <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+        {% endif %}
+
+        <span class="current">
+            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+        </span>
+
+        {% if page_obj.has_next %}
+            <a href="?page={{ page_obj.next_page_number }}">next</a>
+            <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+        {% endif %}
+    </span>
 </div>
 
 <div class="row">
@@ -21,5 +46,27 @@
         </form>
     </div>
 </div>
+
+<nav aria-label="Page navigation example">
+  <ul class="pagination">
+    <li class="page-item">
+    {% if page_obj.has_previous %}
+      <a class="page-link" href="?page={{ page_obj.previous_page_number }}" aria-label="Previous">
+        <span aria-hidden="true">&laquo;</span>
+      </a>
+    {% endif %}
+    </li>
+    <li class="page-item"><a class="page-link" href="#">1</a></li>
+    <li class="page-item"><a class="page-link" href="#">2</a></li>
+    <li class="page-item"><a class="page-link" href="#">3</a></li>
+    <li class="page-item">
+    {% if page_obj.has_next %}
+      <a class="page-link" href="?page={{ page_obj.next_page_number }}" aria-label="Next">
+        <span aria-hidden="true">&raquo;</span>
+      </a>
+    {% endif %}
+    </li>
+  </ul>
+</nav>
 
 {% endblock %}
