--- a/cities/templates/cities/home.html
+++ b/cities/templates/cities/home.html
@@ -19,23 +19,6 @@
     </div>
 </div>
 
-<div class="pagination">
-    <span class="step-links">
-        {% if page_obj.has_previous %}
-            <a href="?page=1">&laquo; first</a>
-            <a href="?page={{ page_obj.previous_page_number }}">previous</a>
-        {% endif %}
-
-        <span class="current">
-            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
-        </span>
-
-        {% if page_obj.has_next %}
-            <a href="?page={{ page_obj.next_page_number }}">next</a>
-            <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
-        {% endif %}
-    </span>
-</div>
 
 <div class="row">
     <div class="col-md-4">
@@ -48,24 +31,24 @@
 </div>
 
 <nav aria-label="Page navigation example">
-  <ul class="pagination">
-    <li class="page-item">
+  <ul class="pagination justify-content-center">
     {% if page_obj.has_previous %}
+    <li class="page-item">
       <a class="page-link" href="?page={{ page_obj.previous_page_number }}" aria-label="Previous">
         <span aria-hidden="true">&laquo;</span>
       </a>
-    {% endif %}
     </li>
-    <li class="page-item"><a class="page-link" href="#">1</a></li>
-    <li class="page-item"><a class="page-link" href="#">2</a></li>
-    <li class="page-item"><a class="page-link" href="#">3</a></li>
-    <li class="page-item">
+    <li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}">{{ page_obj.previous_page_number }}</a></li>
+    {% endif %}
+    <li class="page-item active"><a class="page-link">{{ page_obj.number }}</a></li>
     {% if page_obj.has_next %}
+    <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}">{{ page_obj.next_page_number }}</a></li>
+    <li class="page-item">
       <a class="page-link" href="?page={{ page_obj.next_page_number }}" aria-label="Next">
         <span aria-hidden="true">&raquo;</span>
       </a>
-    {% endif %}
     </li>
+    {% endif %}
   </ul>
 </nav>
 
