--- a/templates/base.html
+++ b/templates/base.html
@@ -47,6 +47,21 @@
         </div>
     </nav>
     <div class="container">
+        <div class="row">
+            <div class="col-md-8 mx-auto my-4">
+                {% if messages %}
+                    {% for message in messages %}
+                    <div class="alert{% if message.tags %} alert-{{ message.tags }}{% endif %} alert-dismissible fade show" role="alert">
+                        {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}Important: {% endif %}
+                        {{ message }}
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                    {% endfor %}
+                {% endif %}
+            </div>
+        </div>
+    </div>
+    <div class="container">
         {% block content %}{% endblock %}
     </div>
 <!-- Optional JavaScript; choose one of the two! -->
